// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Handler should only return the Component, when loading and showComponentWhileLoading is false 1`] = `
<div
  className="handler"
>
  <div>
    Test
  </div>
</div>
`;

exports[`Handler should only return the loading-message, wen showComponentWhileLoading is false 1`] = `
<div
  className="handler"
>
  <div
    className="handler--loading"
  >
    loading...
  </div>
</div>
`;

exports[`Handler should return the loading-message and the component 1`] = `
<div
  className="handler"
>
  <div
    className="handler--loading"
  >
    loading...
  </div>
  <div>
    Test
  </div>
</div>
`;
